third_party/move/move-compiler-v2/tests/checking/typing/vector_with_non_base_type_inferred.exp

Diagnostics:
error: invalid type instantiation `&u64`: only structs, vectors, and primitive types allowed
  ┌─ tests/checking/typing/vector_with_non_base_type_inferred.move:4:9
  │
4 │         vector[&0];
  │         ^^^^^^

error: invalid type instantiation `&mut u64`: only structs, vectors, and primitive types allowed
  ┌─ tests/checking/typing/vector_with_non_base_type_inferred.move:5:9
  │
5 │         vector[&mut 0];
  │         ^^^^^^

error: invalid type instantiation `()`: only structs, vectors, and primitive types allowed
  ┌─ tests/checking/typing/vector_with_non_base_type_inferred.move:6:9
  │
6 │         vector[()];
  │         ^^^^^^

error: invalid type instantiation `(u64, bool)`: only structs, vectors, and primitive types allowed
  ┌─ tests/checking/typing/vector_with_non_base_type_inferred.move:7:9
  │
7 │         vector[(0, false)];
  │         ^^^^^^
